--- a/sections/project/index.pug
+++ b/sections/project/index.pug
@@ -38,15 +38,7 @@ include hdrnavbar
     p The most crucial editing phase was lead by 
         a(href="https://arikia.com") Arikia Millikan
         |, which took a quite confused document and transformed to the current shape.
-    p Other significant contribution comes from 
-        b Barbara Gianessi
-        |, 
-        b Beatrice Cavicchioli
-        |, 
-        b Giovanni Civardi
-        |, and 
-        b Sophie Charleson
-        |. With their valuable insights, patience, and questioning, they helped a lot the development of this document, challenging the assumptions and producing a smooth exposure even in the most complicated parts. Sophie also authored the 
+    p Other significant contribution comes from Barbara Gianessi, Beatrice Cavicchioli, Giovanni Civardi, and Sophie Charleson. With their valuable insights, patience, and questioning, they helped a lot the development of this document, challenging the assumptions and producing a smooth exposure even in the most complicated parts. Sophie also authored the 
         a(href="/project/glossary") Glossary
         |.
 
