added our latest sponsor

--- a/sections/team.pug
+++ b/sections/team.pug
@@ -26,7 +26,7 @@ html
         div.mainstyle
             include navbar 
             p The team below is volunteer based. The project is managed as a GPL free software community, part of a larger plan: 
-                a(href="https://tracking.exposed") tracking-exposed
+                a(href="https://tracking.exposed") tracking.exposed
                 |.
 
         div.mainstyle
@@ -35,7 +35,7 @@ html
                 tbody
                     tr
                         td
-                            p Our Facebook page: 
+                            p Our (poorly maintained) Facebook page: 
                                 a(href="https://www.facebook.com/personalizationalgorithm") Personalisation Algorithms
                         td
                             p Telegram bot: 
@@ -53,44 +53,40 @@ html
                             p 
                                 span.glyphicon.glyphicon-envelope
                                 |  an e-mail
-                            small change the [﹫・], they are not what they looks
                             p
                                 b support﹫tracking・exposed
                         td
                             P Mattermost 
-                                a(href="https://chat.securitywithoutborders.org/community/channels/trackingexposed") chat
-                        td
-                            p Twitter 
-                                a(href="https://twitter.com/hashtag/fbTREX?src=hash") #fbTREX
+                                a(href="https://chat.securitywithoutborders.org/community/channels/trackingexposed") channel #trackingexposed
 
         div.mainstyle
-            h2 Sponsor, Partners and Prices
+            h2 2018-2019 Sponsor and Partners
             div.container
                 div.topheader
                     div.col-xs-4.col-sm-4.col-md-4.col-lg-4
-                        p DigitalFund (2017)
-                        small successfully got our first small grant.
+                        img(src="/images/vietschfoundation.jpeg")
+
+                    div.col-xs-4.col-sm-4.col-md-4.col-lg-4
+                        img(src="/images/nlnet.svg")
+
                     div.col-xs-4.col-sm-4.col-md-4.col-lg-4
                         p Dandelion, Spaziodati
-                        small semanting analysis engine
-                    div.col-xs-4.col-sm-4.col-md-4.col-lg-4
-                        p Data Transparency Lab 
-                        small 2018 price and grant
+                        small semantinc analysis engine
+
                 div.topheader
                     div.col-xs-4.col-sm-4.col-md-4.col-lg-4
-                        p WebFoundation (2017)
-                        small for the join research
-                    div.col-xs-4.col-sm-4.col-md-4.col-lg-4
                         p DATACTIVE
-                        small Academic frontend of fbTREX
+                        small Academic parner 
                     div.col-xs-4.col-sm-4.col-md-4.col-lg-4
                         p Center Cultivation of Technology
                         small where you can 
                             b donate
                             |! ;)
 
+
+
         div.mainstyle
-            h2 Who did this?
+            h2 Who's working on this?
             table.table.table-striped
                 tbody
                     tr
@@ -101,6 +97,10 @@ html
                         td Umberto Boschi
                             br
                             | developer and project management
+                        td Shannon Cunningham
+                            br
+                            | content creation 
+                    tr
                         td 
                             a(href="https://twitter.com/@ciaby" target="_blank") Giovanni Civardi 
                             br
@@ -108,10 +108,10 @@ html
                         td Costantino Carugno
                             br
                             | data analysis and advocate
-                    tr
                         td Barbara Gianessi
                             br
                             | editing and various help
+                    tr
                         td Sophie Charleson
                             br
                             | editing and communication
@@ -124,16 +124,22 @@ html
                             | data analysis and research
                     tr
                         td 
-                            a(href="https://twitter.com/vrde" target="_blank") Alberto Granzotto
-                            br
-                            | web-extension developer
-                        td 
                             a(href="https://github.com/digitigrafo" target="_blank") Cristina Carnevali
                             br
                             | frontend, community
 
 
         div.mainstyle
+            h2 Past Sponsor and Partners
+            div.container
+                div.topheader
+                    div.col-xs-4.col-sm-4.col-md-4.col-lg-4
+                        p DigitalFund (2017)
+                        small successfully got our first small grant.
+                    div.col-xs-4.col-sm-4.col-md-4.col-lg-4
+                        p WebFoundation (2017)
+                        small for the join research
+
             h2 Past contributors which we can't forget
             table.table.table-striped
                 tbody
@@ -150,11 +156,15 @@ html
                             a(href="https://twitter.com/osd_it" target="_blank") OpenSensorsData
                             br
                             | project management, strategy
+                    tr
+                        td 
+                            a(href="https://twitter.com/vrde" target="_blank") Alberto Granzotto
+                            br
+                            | web-extension developer
                         td 
                             a(href="https://twitter.com/@faffa42" target="_blank") Raffaele Angus
                             br
                             | researcher, italian elections analysis
-                    tr
                         td 
                             a(href="https://twitter.com/Gilberto_Conti" target="_blank") Gilberto Conti
                             br
