fixed links and footer in team-aboutus

--- a/sections/team.pug
+++ b/sections/team.pug
@@ -35,8 +35,9 @@ html
                 tbody
                     tr
                         td
-                            p Our (poorly maintained) Facebook page: 
+                            p Our Facebook page: 
                                 a(href="https://www.facebook.com/personalizationalgorithm") Personalisation Algorithms
+                            small Surprised? afterall, is where the adopters are...
                         td
                             p Telegram bot: 
                                 a(href="https://t.me/fbTREXupdates") fbTREX updates
@@ -64,26 +65,33 @@ html
             div.container
                 div.topheader
                     div.col-xs-4.col-sm-4.col-md-4.col-lg-4
-                        img(src="/images/vietschfoundation.jpeg")
+                        a(href="https://nlnet.nl/project/trackingexposed/") 
+                            img(src="/images/vietschfoundation.jpeg")
 
                     div.col-xs-4.col-sm-4.col-md-4.col-lg-4
-                        img(src="/images/nlnet.svg")
+                        br
 
                     div.col-xs-4.col-sm-4.col-md-4.col-lg-4
-                        p Dandelion, Spaziodati
-                        small semantinc analysis engine
+                        a(href="https://nlnet.nl/project/trackingexposed/") 
+                            img(src="/images/nlnet.svg")
 
                 div.topheader
                     div.col-xs-4.col-sm-4.col-md-4.col-lg-4
-                        p DATACTIVE
+                        p 
+                            a(href="https://dandelion.eu") Dandelion
+                            |, Spaziodati
+                        b semantic analysis engine
+
+                    div.col-xs-4.col-sm-4.col-md-4.col-lg-4
+                        p 
+                            a(href="https://data-activism.net/2018/09/datactive-proudly-presents-alex-an-interview-with-fbtrex-lead-developer-claudio-agosti/") DATACTIVE
                         small Academic parner 
                     div.col-xs-4.col-sm-4.col-md-4.col-lg-4
-                        p Center Cultivation of Technology
+                        p 
+                            a(href="https://techcultivation.org/") Center Cultivation of Technology
                         small where you can 
                             b donate
                             |! ;)
-
-
 
         div.mainstyle
             h2 Who's working on this?
@@ -128,7 +136,6 @@ html
                             br
                             | frontend, community
 
-
         div.mainstyle
             h2 Past Sponsor and Partners
             div.container
@@ -170,4 +177,3 @@ html
                             br
                             | development
 
-        div.footer 
