updated publication page with our IPR op-ed

--- a/sections/talks/landing.pug
+++ b/sections/talks/landing.pug
@@ -25,18 +25,24 @@ html
       include ../navbar
 
     div.mainstyle
-      h3 Winter 2018/2019 upcoming changes
+      h3 2019
+      ul.fb--icon-list
+        li op-ed on internetPolicyReview: 
+            a(href="https://policyreview.info/articles/news/personalisation-algorithms-and-elections-breaking-free-filter-bubble/1385") Personalisation algorithms and elections: breaking free of the filter bubble
+            |. It is a piece written with Stefania Milan, as build up of 
+            a(href="https://algorithms.exposed") ALEX
+            |  website.  would become the most academic face of the project, fbTREX would be the technical resource for the FLOSS project.
+
+      h3 2019 Coming soon
       ul.fb--icon-list
         li 
             b Coming soon: 
             a(href="https://eu19.tracking.exposed") European Election monitoring
             |, 
-            a(href="https://github.com/tracking-exposed/presentation/blob/master/European%20Election%20action%20plan%20-%20v1.3.pdf") high level project description
+            a(href="https://github.com/tracking-exposed/presentation/blob/master/European%20Election%20action%20plan%20-%20v1.3.pdf") check the high level project description
             |.
-        li An experiment on exploding filter bubbles by using RSS
-        li https://algorithms.exposed would become the most academic face of the project, fbTREX would be the technical resource for the FLOSS project.
      
-      h3 2018 - peer review publications
+      h3 2018 Publications
       ul.fb--icon-list
         li 
           b PEVA/Performance 
