removed old pages and fixed style coherence

--- a/sections/alarms.pug
+++ b/sections/alarms.pug
@@ -13,7 +13,7 @@ html
 
     body
     
-        .container-fluid
+        .container
             include navbar
             .simpletext
                 h2 Alarms
