--- a/sections/backstory.pug
+++ b/sections/backstory.pug
@@ -21,10 +21,10 @@ html
 
   body
 
-    div.propaganda
+    div.container
         include navbar
 
-    div.propaganda
+    div.container
         h2 This page is about the removed sections, might be used to collect what get removed during the days? nobody knows.
 
     div#alpha
