--- a/sections/beta.pug
+++ b/sections/beta.pug
@@ -24,7 +24,7 @@ html
 
   body
  
-  div.polite-propaganda
+  div.container
     include navbar
     p
       i In December 2016, we have entered the beta phase of facebook.tracking.exposed, these the shiny improvements:
