--- a/sections/project/hdrnavbar.pug
+++ b/sections/project/hdrnavbar.pug
@@ -21,22 +21,24 @@ html
 
     body
 
-        nav.navbar.navbar-expand-lg.navbar-light.bg-light
-            a.navbar-brand(href='/project/') Project status
-            button.navbar-toggler(type='button', data-toggle='collapse', data-target='#navbarNav', aria-controls='navbarNav', aria-expanded='false', aria-label='Toggle navigation')
-                span.navbar-toggler-icon
+        .container
 
-            #navbarNav.collapse.navbar-collapse
-                ul.navbar-nav
-                    li.nav-item
-                        a.nav-link(href='/project/glossary') Glossary
-                    li.nav-item
-                        a.nav-link(href='/project/summaries') Summaries
-                    li.nav-item
-                        a.nav-link(href='/project/problem') Problem
-                    li.nav-item
-                        a.nav-link(href='/project/solution') Solution
-                    li.nav-item
-                        a.nav-link(href='/project/details') Details
-                    li.nav-item
-                        a.nav-link(href='/') Back to home
+            nav.navbar.navbar-expand-lg.navbar-light.bg-light
+                a.navbar-brand(href='/project/') Project status
+                button.navbar-toggler(type='button', data-toggle='collapse', data-target='#navbarNav', aria-controls='navbarNav', aria-expanded='false', aria-label='Toggle navigation')
+                    span.navbar-toggler-icon
+
+                #navbarNav.collapse.navbar-collapse
+                    ul.navbar-nav
+                        li.nav-item
+                            a.nav-link(href='/project/glossary') Glossary
+                        li.nav-item
+                            a.nav-link(href='/project/summaries') Summaries
+                        li.nav-item
+                            a.nav-link(href='/project/problem') Problem
+                        li.nav-item
+                            a.nav-link(href='/project/solution') Solution
+                        li.nav-item
+                            a.nav-link(href='/project/details') Details
+                        li.nav-item
+                            a.nav-link(href='/') Back to home
