--- a/sections/project/index.pug
+++ b/sections/project/index.pug
@@ -1,5 +1,5 @@
 include hdrnavbar
-.polite-propaganda
+.container
 
     p fbTREX is the first project part of the 
         a(href="https://tracking.exposed") TRex
