--- a/sections/talks/landing.pug
+++ b/sections/talks/landing.pug
@@ -21,10 +21,10 @@ html
 
   body
 
-    div.mainstyle
+    div.container
       include ../navbar
 
-    div.mainstyle
+    div.container
       h3 2019
       ul.fb--icon-list
         li op-ed on internetPolicyReview: 
