--- a/sections/team.pug
+++ b/sections/team.pug
@@ -31,6 +31,7 @@ html
 
         div.mainstyle
             h2 Contacts:
+            include contactus
             table.table.table-striped
                 tbody
                     tr
