updated team accordingly to the last tempalte update

--- a/sections/team.pug
+++ b/sections/team.pug
@@ -22,46 +22,18 @@ html
 
     body
 
-
-        div.mainstyle
+        div.container
             include navbar 
             p The team below is volunteer based. The project is managed as a GPL free software community, part of a larger plan: 
                 a(href="https://tracking.exposed") tracking.exposed
                 |.
 
-        div.mainstyle
+        div.container
             h2 Contacts:
             include contactus
-            table.table.table-striped
-                tbody
-                    tr
-                        td
-                            p Our Facebook page: 
-                                a(href="https://www.facebook.com/personalizationalgorithm") Personalisation Algorithms
-                            small Surprised? afterall, is where the adopters are...
-                        td
-                            p Telegram bot: 
-                                a(href="https://t.me/fbTREXupdates") fbTREX updates
-                        td
-                            p The issue trackers: 
-                                div < 
-                                    img.githublogo(src="/images/github-256.png")
-                                    a(href="https://github.com/tracking-exposed/web-extension/issues") browser extension
-                                    |, 
-                                    a(href="https://github.com/tracking-exposed/facebook/issues") backend
-                                    |  /> 
-                    tr
-                        td
-                            p 
-                                span.glyphicon.glyphicon-envelope
-                                |  an e-mail
-                            p
-                                b support﹫tracking・exposed
-                        td
-                            P Mattermost 
-                                a(href="https://chat.securitywithoutborders.org/community/channels/trackingexposed") channel #trackingexposed
 
-        div.mainstyle
+
+        div.container
             h2 2018-2019 Sponsor and Partners
             div.container
                 div.topheader
@@ -94,7 +66,7 @@ html
                             b donate
                             |! ;)
 
-        div.mainstyle
+        div.container
             h2 Who's working on this?
             table.table.table-striped
                 tbody
@@ -137,7 +109,7 @@ html
                             br
                             | frontend, community
 
-        div.mainstyle
+        div.container
             h2 Past Sponsor and Partners
             div.container
                 div.topheader
