updated links about initiatives and talks

--- a/sections/talks/landing.pug
+++ b/sections/talks/landing.pug
@@ -25,21 +25,65 @@ html
       include ../navbar
 
     div.container
-      h3 2019
+      h3 2019 articles
       ul.fb--icon-list
-        li op-ed on internetPolicyReview: 
+        li Article on postpogressive.eu of Umberto Boschi and Federico Sarchi: 
+            a(href="https://progressivepost.eu/the-mag/popping-the-bubble") popping the bubble
+            |.
+        li op-ed on internetPolicyReview from Stefania Milan: 
             a(href="https://policyreview.info/articles/news/personalisation-algorithms-and-elections-breaking-free-filter-bubble/1385") Personalisation algorithms and elections: breaking free of the filter bubble
             |. It is a piece written with Stefania Milan, as build up of 
             a(href="https://algorithms.exposed") ALEX
             |  website.  would become the most academic face of the project, fbTREX would be the technical resource for the FLOSS project.
 
+      h3 2019 talks & events
+      table.table.table-striped
+        thead
+          tr
+            th When
+            th What
+            th Links to...
+        tbody
+          tr
+            th February 2019
+            th Datathon 
+            th with 
+              a(href="https://dssg-berlin.org/") Berlin Data Science for Social Good
+          tr
+            th February 2019
+            th EDPS 
+            th
+              a(href="https://www.eudebates.tv/eu_elections_2019/edps-for-eu-elections-how-to-unmask-and-fight-online-manipulation/") How to unmask and fight online manipulation
+          tr
+            th February 2019
+            th Transmediale 
+              a(href="https://2019.transmediale.de/content/affects-ex-machina-unboxing-social-data-algorithms") unboxing ex-machina
+            th
+              a(href="https://vimeo.com/322250610") 24 minutes
+              |, video
+          tr
+            th January 2019
+            th Transmediale, Workshop
+            th [
+              i still TBD
+              |]
+          tr
+            th January 2019
+            th CPDP, Data and election: 
+              a(href="https://www.cpdpconferences.org/cpdp-panels/data-and-elections-an-international-problem-with-no-international-solution") an international problem with no internatioanl solution
+            th 
+              a(href="https://vimeo.com/317686100") 14 minutes
+              |, video
+          tr
+            th January 2019
+            th PrivacyCamp 
+            th 
+              a(href="https://privacycamp.eu/?page_id=1067") Towards real safeguards: Data driven political campaigns and EU election
+
       h3 2019 Coming soon
       ul.fb--icon-list
-        li 
-            b Coming soon: 
-            a(href="https://eu19.tracking.exposed") European Election monitoring
-            |, 
-            a(href="https://github.com/tracking-exposed/presentation/blob/master/European%20Election%20action%20plan%20-%20v1.3.pdf") check the high level project description
+        li European electoral campaign monitoring: 
+            a(href="https://github.com/tracking-exposed/presentation/blob/master/European%20Election%20action%20plan%20-%20v1.3.pdf") high level project description
             |.
      
       h3 2018 Publications
