--- a/sections/revision/bydate.pug
+++ b/sections/revision/bydate.pug
@@ -24,32 +24,26 @@ html
         meta(property="og:image:height" content="400")
         title facebook tracking exposed - HTML revision page
 
-        // remind - loadsnippet is the legacy, loadmetadata is the new one 
-    body(onload="loadsnippet('#metadest', '#render'); loadmetadata('#metadata', '#errors'); ")
+    body(onload="bydate('#metadest', '#render', '#date');")
+
+        include ../navbar
+
+        .container-fluid.center
+            .col-md-10.infoblock
+                h1.center
+                    span#date
+                    |  
+                    a(href="" onclick="next()") next
+                    | ->
 
         .container-fluid
-            include navbar
             .col-md-1
-            .col-md-4
-                div.infoblock
-                    h3
-                        a Metadata extracted
-                    div.metadata(id='metadata')
-
-                div.infoblock
-                    h3
-                        a Error in extraction
-                    div.metadata(id='errors')
-
-                div.infoblock
-                    h3
-                        a(id="bymeta") (old) Metadata extracted
-                    div.metadata(id='metadest')
-
+            .col-md-4.infoblock
+                h3 Metadata extracted
+                div.metadata(id='metadata')
 
             .col-md-1
             .col-md-4.infoblock
-                h3
-                    a(id="bysnippet") The user saw this
+                h3 The user saw this
                 div.snippet(id='render')
 
