--- a/sections/revision/revision.pug
+++ b/sections/revision/revision.pug
@@ -24,8 +24,7 @@ html
         meta(property="og:image:height" content="400")
         title facebook tracking exposed - HTML revision page
 
-        // remind - loadsnippet is the legacy, loadmetadata is the new one 
-    body(onload="loadsnippet('#metadest', '#render'); loadmetadata('#metadata', '#errors'); ")
+    body(onload="loadmetadata('#metadata', '#errors', '#render'); ")
 
         .container-fluid
             include ../navbar
@@ -33,18 +32,17 @@ html
             .col-md-4
                 div.infoblock
                     h3
-                        a Metadata extracted
+                        a Error (if any)
+                    div.metadata(id='errors')
+                div.infoblock
+                    h3
+                        a Summary 
+                    div.metadata(id='summary')
+                div.infoblock
+                    h3
+                        a Metadata 
                     div.metadata(id='metadata')
 
-                div.infoblock
-                    h3
-                        a Error in extraction
-                    div.metadata(id='errors')
-
-                div.infoblock
-                    h3
-                        a(id="bymeta") (old) Metadata extracted
-                    div.metadata(id='metadest')
 
 
             .col-md-1
