aligned the old summary to the new data format

--- a/sections/navbar.pug
+++ b/sections/navbar.pug
@@ -8,13 +8,13 @@ block navbar
     #navbarNav.collapse.navbar-collapse
       ul.navbar-nav
         li.nav-item
-          a.nav-link(href='/initiatives/') Results
+          a.nav-link(href='/initiatives/') Publications & Talks
         li.nav-item
-          a.nav-link(href='/privacy-statement') Privacy
+          a.nav-link(href='/privacy-statement') What we collects and why
         li.nav-item
-          a.nav-link(href='/project') Project
-        li.nav-item
-          a.nav-link(href='/impact/') Stats
+          a.nav-link(href='/project') Know more
         li.nav-item
           a.nav-link(href='/about') About
+        li.nav-item
+          a.nav-link(href='/impact/') Statistics
 
