--- a/styles/index.styl
+++ b/styles/index.styl
@@ -171,8 +171,7 @@ p
 
 .topheader {
     margin: 2% 0;
-    display: flex
-    align-items: baseline
+    display: flex;
 }
 .icontext{
     text-align:center;
