--- a/sections/personal/header.pug
+++ b/sections/personal/header.pug
@@ -1,7 +1,9 @@
 div.container
     div.topheader
         div.col-sm-5.right
-            span Here's are the data you submit
+            span(style='font-size:1.2em') This link 
+                b is secret
+                |, don't share it!
 
         div.col-sm-2.center
             img.fbtrexlogo(alt="logo of fbtrex" src="/images/fbtrex_logo.svg")
