--- a/sections/404.pug
+++ b/sections/404.pug
@@ -22,5 +22,7 @@ html
             |, or in the developer 
             a(href="https://chat.securitywithoutborders.org/community/channels/trackingexposed") chat
             |.
-        p This, because we exclude you don't use github. If is the case, on the heeader, there are our repositories linked ;)
+        p This, because we exclude you don't use github. If is the case, this is our AGPL licensed  
+            a(href="https://github.com/tracking-exposed/facebook") repository
+            | ;)
 
