few last minute polishment

--- a/sections/personal/gdpr.pug
+++ b/sections/personal/gdpr.pug
@@ -35,4 +35,4 @@ html
     h1 still to be done: you should be capable of of:
     ol
         li: refresh your access token
-        li: remove the data you submit
+        li: remove the data you submit (for this, you should email support@tracking.exposed, and we'll provide you a log of the deleted information)
