--- a/sections/personal/specs.pug
+++ b/sections/personal/specs.pug
@@ -32,9 +32,8 @@ html
     include header
     include navbar
 
-    .d-flex.justify-content-center.btn-groups
-
-        h2 Download CSV
+    .container-fluid
+        h2 Download your data in CSV
         p
             a(href="" onclick="downloadCSV()") last 1000 samples collected by you
             |, format v.2
@@ -42,7 +41,7 @@ html
         h2 API specification
 
         p At the moment the best description of the API is 
-            a(href="https://github.com/tracking-exposed/eu19/blob/master/texts-wip/api.md") this
+            a(href="https://github.com/tracking-exposed/eu19/blob/master/texts-wip/api.md") here in this file
             |.
 
 
