--- a/sections/personal/stats.pug
+++ b/sections/personal/stats.pug
@@ -32,4 +32,5 @@ html
     include header
     include navbar
 
-    h2 still to be done and designed
+    .container-fluid
+        h2 Nope, work in progress
